--- a/templates/register.html
+++ b/templates/register.html
@@ -8,17 +8,14 @@ Login - GreenCart
 <h1>Register</h1>
 <form method="post" class="mt-5"">
     <label for="username" class="form-label">Username:
-        <input type="text" name="username" id="username" class="form-control" />
+        <input type="text" name="username" id="username" class="form-control" required/>
     </label>
     <label for="name" class="form-label">Name:
-        <input type="text" name="name" id="name" class="form-control" />
+        <input type="text" name="name" id="name" class="form-control" required/>
     </label>
     <label for="password" class="form-label">New Password:
-        <input type="password" name="password" id="password" class="form-control">
-    </label> 
-    <label for="password" class="form-label">Confirm Password:
-        <input type="password" name="password" id="password" class="form-control">
-    </label> 
+        <input type="password" name="password" id="password" class="form-control" required>
+    </label>
     <input type="submit" value="Sign Up" class="btn btn-success">
 </form>
 {% endblock %}
