--- a/templates/admin.html
+++ b/templates/admin.html
@@ -13,7 +13,38 @@
         </a>
     </div>
     <table class="table">
-
+        <thead>
+            <tr>
+                <th>Category ID</th>
+                <th>Category Name</th>
+                <th>Number of Products</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <body>
+            {% for category in categories %}
+                <tr>
+                    <td>{{ category.id }}</td>
+                    <td>{{ category.name }}</td>
+                    <td>{{ category.product|length }}</td>
+                    <td>
+                        <a href="{{url_for('show_category', id=category.id)}}" class="btn btn-outline-success">
+                            <i class="fas fa-search"></i>
+                            Show
+                        </a>
+                        <a class="btn btn-primary" href="{{ url_for('edit_category', id=category.id) }}">
+                            <i class="fas fa-edit fa-xs"></i>
+                            Edit
+                        </a>
+                        
+                        <a class="btn btn-danger" href="{{ url_for('delete_category', id=category.id) }}">
+                            <i class="fas fa-trash fa-xs"></i>
+                            Delete
+                        </a>
+                    </td>
+                </tr>
+            {% endfor %}
+        </body>
     </table>
 {% endblock %}
 {% block styles %}
