--- a/templates/product/delete.html
+++ b/templates/product/delete.html
@@ -1,13 +1,13 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-    Delete Category - GreenCart
+    Delete Product - GreenCart
 {% endblock %}
 {% block content %}
-    <h1>Delete Category</h1>
+    <h1>Delete Product</h1>
     <h3 class="text-center text-danger">
-        Are you sure you want to delete the category 
-        <strong>{{ category.name }}</strong>
+        Are you sure you want to delete the product
+        <strong>{{ product.name }}</strong>
         ?
     </h3>
     <form method="post" class="form text-center">
