--- a/templates/nav.html
+++ b/templates/nav.html
@@ -12,7 +12,7 @@
           <a class="nav-link" href="{{url_for('profile')}}">Profile</a>
         </li>
         
-        {% if not user.is_admin %}
+        {% if user.is_admin %}
           <li class="nav-item">
             <a href="{{url_for('cart')}}" class="nav-link">Cart</a>
           </li>
